changed location of data folder

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 Preliminary/.ipynb_checkpoints/Immersion Ethics Preliminary Exploration-checkpoint.ipynb
 Preliminary/data/LLCP2014XPT.txt
 Preliminary/data/LLCP2014XPT.ZIP
+data/LLCP2014XPT.txt
+data/LLCP2014XPT.ZIP
