--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Preliminary/data/LLCP2014XPT.txt
 Preliminary/data/LLCP2014XPT.ZIP
 data/LLCP2014XPT.txt
 data/LLCP2014XPT.ZIP
+Study/.ipynb_checkpoints/Closing the Gap Study Revisited-checkpoint.ipynb
